# demo-bzl-app

./: .gitignore  BUILD.bazel  README.md  TODO.txt  WORKSPACE.bazel  package-lock.json  package.json  tsconfig.json
src/: index.ts
